INCLUDE(${SWIG_USE_FILE})

pkg_check_modules(GENPOS REQUIRED genPos)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${POCOLIBS_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GENPOS_INCLUDE_DIRS})

LINK_DIRECTORIES(${POCOLIBS_LIBDIR})

SET(CMAKE_SWIG_FLAGS "${GENPOS_CFLAGS}")

SET(TARGET ors_genpos_poster)

SWIG_ADD_MODULE(${TARGET} python ors_genpos_poster.i ors_genpos_poster.c)
SWIG_LINK_LIBRARIES(${TARGET} ${POCOLIBS_LIBRARIES})

INSTALL (FILES __init__.py
		${CMAKE_CURRENT_BINARY_DIR}/_${TARGET}.so 
		${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.py
		 DESTINATION ${PYTHON_INSTDIR}/morse/middleware/pocolibs/controllers/Control_Poster/
		)

