INCLUDE(${SWIG_USE_FILE})

pkg_check_modules(MHP REQUIRED mhp)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${POCOLIBS_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MHP_INCLUDE_DIRS})

LINK_DIRECTORIES(${POCOLIBS_LIBDIR})

SET(CMAKE_SWIG_FLAGS "")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")


SET(TARGET ors_human_poster)

SWIG_ADD_MODULE(${TARGET} python ors_human_poster.i ors_human_poster.c)
SWIG_LINK_LIBRARIES(${TARGET} ${POCOLIBS_LIBRARIES})

INSTALL (FILES __init__.py 
			   ${CMAKE_CURRENT_BINARY_DIR}/_${TARGET}.so 
			   ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.py
		 DESTINATION ${PYTHON_INSTDIR}/morse/middleware/pocolibs/sensors/Human_Poster/
		)

